--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.1",
+    "@ant-design/icons": "^5.4.0",
     "@react-spring/web": "^9.7.4",
     "antd": "^5.19.4",
-    "gsap": "^3.12.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.0",
     "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
