--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.0",
+    "react-spring": "^9.7.4",
     "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
