--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@ant-design/icons": "^5.4.0",
     "@react-spring/web": "^9.7.4",
     "antd": "^5.19.4",
+    "aos": "^2.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.0",
     "react-spring": "^9.7.4",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
