--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@emotion/react": "^11.13.0",
     "@react-spring/web": "^9.7.4",
     "antd": "^5.19.4",
     "aos": "^2.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.0",
     "react-spring": "^9.7.4",
